<?xml version="1.0"?>
<package>
  <name>decaying_obstacle_layer</name>
  <version>0.0.0</version>
  <description>The decaying_obstacle_layer package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/plugins.xml"/>
  </export>
</package>
